fixed cringe quotes error

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-rotating-text": "^1.4.1",
-    "react-text-rotator": "^1.2.0"
+    "react-text-rotator": "^1.2.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
